<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/layout_fragment">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">
            <TextView
                android:id="@+id/txt_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/title_more"
                android:textSize="24dp"
                android:paddingLeft="12dp"
                android:textColor="@color/white"
                android:gravity="center"/>
        </LinearLayout>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/bg_header_hamberger_menu"
        android:padding="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="14dp">
            <cn.carbs.android.avatarimageview.library.AvatarImageView
                android:id="@+id/iv_user"
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:aiv_BoarderWidth="2dp"
                app:aiv_ShowBoarder="false"
                app:aiv_TextSizeRatio="0.4"
                android:src="@drawable/male"/>
            <TextView
                android:id="@+id/tv_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="right"
                android:text="@string/login"
                android:textColor="@color/white"/>
        </LinearLayout>
        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/username"
            android:textColor="@color/white"/>
        <TextView
            android:id="@+id/tv_user_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/white"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/white">
        <TextView
            android:id="@+id/tv_user_profile"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:text="@string/user_profile"
            android:textColor="@color/black"
            android:gravity="center_vertical"
            android:layout_margin="12dp"
            android:clickable="true"/>
        <TextView
            android:id="@+id/tv_reward"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:text="@string/reward"
            android:textColor="@color/black"
            android:gravity="center_vertical"
            android:layout_margin="12dp"
            android:clickable="true"/>
    </LinearLayout>

</LinearLayout>
