<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img_bg_register"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/register"
        android:scaleType="centerCrop"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_header_register"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/register"
            android:textSize="30dp"/>
        <TextView
            android:id="@+id/tv_display_register_firstname"
            android:paddingTop="12dp"
            android:paddingLeft="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/firstname"
            android:textSize="14dp"
            android:textColor="@color/black"/>
        <android.support.design.widget.TextInputEditText
            android:id="@+id/edt_firstname"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:imeOptions="actionUnspecified"
            android:inputType="text"
            android:background="@drawable/s65"/>
        <TextView
            android:id="@+id/tv_display_register_lastname"
            android:paddingTop="12dp"
            android:paddingLeft="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lastname"
            android:textSize="14dp"
            android:textColor="@color/black"/>
        <android.support.design.widget.TextInputEditText
            android:id="@+id/edt_lastname"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:imeOptions="actionUnspecified"
            android:inputType="text"
            android:background="@drawable/s65"/>
        <TextView
            android:id="@+id/tv_display_register_email"
            android:paddingTop="12dp"
            android:paddingLeft="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="14dp"
            android:textColor="@color/black"/>
        <android.support.design.widget.TextInputEditText
            android:id="@+id/edt_email"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:imeOptions="actionUnspecified"
            android:inputType="textEmailAddress"
            android:background="@drawable/s65"/>
        <TextView
            android:id="@+id/tv_display_register_password"
            android:paddingTop="12dp"
            android:paddingLeft="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="14dp"
            android:textColor="@color/black"/>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/etPasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/edt_password"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@drawable/s65"/>
        </android.support.design.widget.TextInputLayout>
        <TextView
            android:id="@+id/tv_display_register_confirm_password"
            android:paddingTop="12dp"
            android:paddingLeft="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_password"
            android:textSize="14dp"
            android:textColor="@color/black"/>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/etPasswordConfirmLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/edt_confirmpassword"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@drawable/s65"/>
        </android.support.design.widget.TextInputLayout>
        <LinearLayout
            android:padding="12dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <LinearLayout
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_display_register_termandcondition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/term_and_conditions"
                android:textSize="16dp"
                android:textColor="@color/black"/>
        </LinearLayout>
            <CheckBox
                android:id="@+id/cb_accept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accept_term_and_conditions"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center">
            <Button
                android:id="@+id/btn_Register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textregister_here"
                android:textColor="@color/white"
                android:textSize="22dp"
                android:background="@drawable/background_pink"/>
        </LinearLayout>
    </LinearLayout>
    </ScrollView>
</RelativeLayout>
