<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_forget_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img_forget_password"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/register"
        android:scaleType="centerCrop"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_header_forget_password"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/forget_password"
                android:textSize="30dp"/>

            <!--<TextView-->
                <!--android:layout_marginTop="12dp"-->
                <!--android:layout_gravity="center"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="EMAIL"-->
                <!--android:textColor="@color/colorPrimary"-->
                <!--android:textSize="12dp"/>-->

            <EditText
                android:id="@+id/editemail"
                android:layout_marginTop="10dp"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:hint="@string/email"
                android:background="@drawable/s65"/>

            <LinearLayout
                android:layout_gravity="center"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:paddingTop="12dp"
                android:orientation="vertical">
                <Button
                    android:id="@+id/btnAccept"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/accept"
                    android:textColor="@color/white"
                    android:textSize="22dp"
                    android:background="@drawable/background_pink"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
