<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img_bg_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/login"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
        <ImageView
            android:layout_gravity="right"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/close_signin"
            android:id="@+id/imgskip" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="160dp"
            android:src="@drawable/citythai1"
            android:id="@+id/img_logo"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/tv_display_sign_email"
            android:paddingLeft="35dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="14dp"/>

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editName"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:imeOptions="actionUnspecified"
            android:inputType="textEmailAddress"
            android:background="@drawable/s65"/>

        <TextView
            android:id="@+id/tv_display_sign_password"
            android:paddingLeft="35dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="14dp"
            android:paddingTop="12dp"/>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/etPasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editPassword"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:background="@drawable/s65"/>
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_gravity="center"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:orientation="vertical">
            <Button
                android:id="@+id/btnSignIn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#C8C8C8"
                android:onClick="onClick"
                android:text="Sign in"
                android:textColor="@color/black"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:paddingRight="35dp"
            android:paddingTop="12dp"
            android:gravity="right"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_display_sign_member_yet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textnot_a_member_yet"
                android:textColor="@color/black"
                android:textSize="14dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_gravity="center"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginTop="12dp"
            android:orientation="vertical">
            <com.facebook.login.widget.LoginButton
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <Button
                android:id="@+id/fb"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#416BC1"
                android:onClick="onClick"
                android:text="FaceBook"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:fontFamily="monospace"/>
        </LinearLayout>

        <LinearLayout
            android:layout_gravity="center"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginTop="12dp"
            android:orientation="vertical">
            <com.google.android.gms.common.SignInButton
                android:id="@+id/btn_sign_in"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"/>
            <Button
                android:id="@+id/btnSignInGoogle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#D34836"
                android:onClick="onClick"
                android:text="GOOGLE"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:fontFamily="monospace"/>
        </LinearLayout>

        <LinearLayout
            android:paddingRight="35dp"
            android:paddingTop="12dp"
            android:gravity="right"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_display_sign_forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textforgot_you_password"
                android:textColor="@color/black"
                android:textSize="14dp"
                android:fontFamily="monospace"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
